# learning-cmux-with-agents

./: .env.example  .gitignore  README.md  justfile
.claude/: settings.json
.claude/agents/: build-be.md  build-fe.md  lead.md  plan.md  test.md
.claude/commands/: cmux-did-spawn.md  cmux-fresh.md  prime.md  spawn-fs-team.md
.claude/skills/cmux/: SKILL.md
.claude/status_lines/: context_bar.py
.team/: README.md
apps/flotion/: README.md  justfile
apps/flotion/backend/: main.py  pyproject.toml
apps/flotion/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  (+1 more)
cmux/: fs-team.layout.json
guide/: index.html
prompts/: 01-hello-workspace.md  02-read-it-back.md  03-split-into-a-grid.md  04-map-the-world.md  05-tidy-up.md  06-launch-one-agent.md  07-keys-and-credentials.md  08-two-agents-one-question.md  09-declarative-boot.md  10-native-sessions-and-resume.md  11-the-2x2-fleet.md  12-fan-out-fan-in.md  13-live-status-board.md  14-reactive-loop.md  15-race-and-notify.md  16-scale-and-teardown.md  17-agent-and-live-preview.md  18-agent-drives-the-browser.md  19-self-verifying-agent.md  20-capture-and-replay-auth.md  21-multi-window-command-center.md  22-organized-sidebar-at-scale.md  23-remote-and-cloud-fleets.md  24-crash-proof-resume-the-fleet.md  25-the-software-factory.md  26-color-code-and-label.md  27-theme-and-feel.md  28-custom-actions-and-buttons.md  29-layouts-and-dock-controls.md  30-project-config-and-custom-sidebar.md  31-identify-individual-panes.md  PATTERNS-read-and-notify.md
scripts/: spawn_fast.py
(+6 files in other folders)
